# libvideo-metadata

./: CMakeLists.txt  README.md  atom.mk
include/video-metadata/: vmeta.h  vmeta_frame.h  vmeta_frame_proto.h  vmeta_frame_v1.h  vmeta_frame_v2.h  vmeta_frame_v3.h  vmeta_proto.h  vmeta_session.h  vmeta_session_proto.h
libvideo-metadata-extract/include/video-metadata/: vmeta_extract.h
libvideo-metadata-extract/src/: vmeta_extract.c
proto/: CMakeLIsts.txt  CMakeLists.txt  vmeta.proto
src/: vmeta_csv.c  vmeta_csv.h  vmeta_frame.c  vmeta_frame_proto.c  vmeta_frame_v1.c  vmeta_frame_v2.c  vmeta_frame_v3.c  vmeta_json.c  vmeta_json.h  vmeta_json_proto.c  vmeta_json_proto.h  vmeta_priv.h  vmeta_proto.c  vmeta_session.c  vmeta_session_proto.c  vmeta_utils.c
tests/: vmeta_test.c  vmeta_test.h  vmeta_test_compare.c  vmeta_test_proto.c  vmeta_test_session.c  vmeta_test_utils.c  vmeta_test_v3.c
tools/: vmeta_extract.c  vmeta_json_to_csv.py
